# life-piston-rust

./: Cargo.toml  README.md
src/: game_of_life.rs  main.rs  timing_buffer.rs
